Code tweaks